[Sys-6] Implement file I/O system call Write(char *buffer, int size, OpenFileId id)

--- a/code/test/Makefile
+++ b/code/test/Makefile
@@ -33,7 +33,7 @@ CPP = /lib/cpp
 INCDIR =-I../userprog -I../threads -I../lib
 CFLAGS = -G 0 -c $(INCDIR)
 
-all: halt shell matmult sort test1 test2 create open close
+all: halt shell matmult sort test1 test2 create open close write
 
 start.o: start.s ../userprog/syscall.h
 	$(CPP) $(CPPFLAGS) start.s > strt.s
@@ -93,3 +93,9 @@ close.o: close.c
 close: close.o start.o
 	$(LD) $(LDFLAGS) start.o close.o -o close.coff
 	../bin/coff2noff close.coff close
+
+write.o: write.c
+	$(CC) $(CFLAGS) -c write.c
+write: write.o start.o
+	$(LD) $(LDFLAGS) start.o write.o -o write.coff
+	../bin/coff2noff write.coff write
