[VM-1] Implement software-management of the TLB

--- a/code/Makefile.common
+++ b/code/Makefile.common
@@ -90,24 +90,32 @@ USERPROG_H = ../userprog/addrspace.h\
 	../userprog/syscall.h\
 	../userprog/synchconsole.h\
     ../userprog/framemanager.h\
+    ../userprog/replacementstrategy.h\
+    ../userprog/replacementFIFO.h\
+    ../userprog/coremapmanager.h\
         ../filesys/filesys.h\
         ../filesys/openfile.h\
         ../machine/console.h\
         ../machine/machine.h\
         ../machine/mipssim.h\
-        ../machine/translate.h
+        ../machine/translate.h\
+        ../machine/tlbmanager.h
 
 USERPROG_C = ../userprog/addrspace.cc\
         ../userprog/exception.cc\
 	../userprog/synchconsole.cc\
     ../userprog/framemanager.cc\
+    ../userprog/replacementFIFO.cc\
+    ../userprog/coremapmanager.cc\
 	../userprog/userkernel.cc\
         ../machine/console.cc\
         ../machine/machine.cc\
         ../machine/mipssim.cc\
-        ../machine/translate.cc
+        ../machine/translate.cc\
+        ../machine/tlbmanager.cc
 
-USERPROG_O = addrspace.o exception.o synchconsole.o console.o framemanager.o machine.o \
+USERPROG_O = addrspace.o exception.o synchconsole.o console.o framemanager.o \
+        replacementFIFO.o coremapmanager.o tlbmanager.o machine.o \
         mipssim.o translate.o userkernel.o
 
 NETWORK_H = ../network/netkernel.h ../network/post.h ../machine/network.h
