--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,1 @@
-code/filesys/Makefile linguist-vendored=true
-code/threads/Makefile linguist-vendored=true
-code/userprog/Makefile linguist-vendored=true
+code/* linguist-vendored=true
